# rust-api

./: .env  Cargo.toml  README.md  docker-compose.yml
README/: admin-api.md  storefront.md
README/Admin/: auth.md  category.md  product.md
README/Storefront/: auth.md  user.md
src/: db_client.rs  libs.rs  main.rs  user.rs  user_repository.rs
src/api/: auth.rs  index.rs  mod.rs  user.rs
src/api/admin/: auth.rs  category.rs  mod.rs  product.rs
src/api/storefront/: auth.rs  index.rs  mod.rs  user.rs
src/model/: api_auth.rs  category.rs  mod.rs  product.rs  user.rs  variant.rs
src/repository/: api_auth_repository.rs  category_repository.rs  mod.rs  user_repository.rs
src/service/: extract_object_id.rs  mod.rs
