[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
awc = "3.1.1"
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
uuid = "1.4.1"
mockall = "0.11.4"
actix-web-httpauth = "0.8.0"
strum = "0.25.0"
strum_macros = "0.25.2"


[dependencies.mongodb]
version = "2.6.0"